# sia

./: .gitignore  .sia.detected.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  README_OLD.md  REPO_INDEX.md  UNINSTALL.md  pyproject.toml  validate_quant001.py
.agents/: skills_metrics.yaml
.github/: copilot-instructions.md
.sia/: LESSONS_LEARNED_MCP_VALIDATION.md  README.md  REQ-008.md
agents/: MICROSOFT_SUITE_AGENT_SUMMARY.md  MICROSOFT_SUITE_MCP_UPDATE_SUMMARY.md  README.md  compliance_officer.md  evolve_spr.py  microsoft_suite_specialist.md  microsoft_suite_specialist_examples.md  microsoft_suite_specialist_mcp_tools.md  microsoft_suite_specialist_quickstart.md  microsoft_suite_specialist_tests.md  research_specialist.md  sia.md  sia_framework.md
core/: AUTO_DISCOVERY.md  CONCEPTS.md  FIRST_PRINCIPLES.md  PROMPT_PLACEMENT.md  STANDARDS.md  SUPER_AGENT.md  UV_STANDARD.md  copilot-instructions.template.md  patterns.py
docs/: CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  QUICKSTART.md  SLASH_COMMANDS.md  SUBAGENT_DELEGATION_ANALYSIS.md  UNINSTALL.md  VALIDATION.md  VSCODE_SETUP.md
installer/: README.md  auto_discovery.py  generate_instructions.py  install.bat  install.py  install.sh  smart_init.py
mcp_servers/: ARCHITECTURE.md  Dockerfile  PROTOTYPE_FINDINGS.md  README.md  VALIDATION_GUIDE.md  VSCODE_SETUP.md  claude_desktop_config.json  docker-compose.yml  fastmcp.json  repo_indexer_mcp.py  run_mcp_inspector.sh  setup_vscode.sh  test_config.py  test_direct_functions.py  test_imports.py  test_mcp_client.py  test_mcp_inmemory.py  test_tool_direct.py  validate_setup.sh
requirements/: README.md  REQ-007.md  REQUIREMENTS_TRACKING.md  SKILLS_AUDIT_2025-11-25.md
skills/: README.md  audit_ddd.py  check_complexity.md  check_complexity.sh  check_coverage.sh  create_expert_agent.md  delegate_subagent.md  delegate_to_copilot.sh  first_principles_analysis.md  generate_index.md  (+9 more)
(+139 files in other folders)
